# polymem

./: .gitignore  API.md  ARCHITECTURE.md  README.md  package.json  pyproject.toml
collectors/base/: client.ts  collector.ts
collectors/chatgpt-mcp/: README.md
collectors/claude-code/: hook-handler.ts  hooks-hybrid.json  hooks-with-injection.json  hooks.json
collectors/cline/: README.md
collectors/codex/: watcher.ts
collectors/cursor/: README.md
docs/: COLLECTOR_SPEC.md  ENGINE_API.md
engine/: context_generator.py  db.py  extractor.py  report.py  server.py  vector_store.py
mcp-server/: server.ts
polymem/: __init__.py
polymem/cli/: __init__.py  client.py  codex_watcher.py  hook.py  install.py  main.py  mcp_server.py
polymem/hooks/: claude_code_collect_only.json  claude_code_full_injection.json  claude_code_hybrid.json
scripts/: daily-report.sh  install-claude-code.sh  start-codex-watcher.sh  start-engine.sh  uninstall-claude-code.sh
