[project]
name = "polymem"
version = "0.1.0"
description = "Cross-model automated memory system (Claude Code / Cursor / Cline / ChatGPT / ...)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.8",
    "chromadb>=0.5.20",
]

[project.scripts]
polymem-engine = "engine.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "engine.backends", "engine.modes"]
